--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "2.0.4",
+	"version": "2.0.5",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && npm run package",
+		"build": "vite build && pnpm package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package",
-		"test": "npm run test:unit",
+		"prepublishOnly": "pnpm package",
+		"test": "pnpm test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
@@ -117,27 +117,25 @@
 		}
 	},
 	"dependencies": {
-		"bits-ui": "2.14.0",
+		"bits-ui": "2.14.1",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1"
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.10.0",
-		"@lucide/svelte": "^0.546.0",
+		"@lucide/svelte": "^0.548.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/kit": "^2.47.2",
+		"@sveltejs/kit": "^2.48.2",
 		"@sveltejs/package": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/vite": "^4.1.15",
-		"@testing-library/jest-dom": "^6.9.1",
-		"@testing-library/svelte": "^5.2.8",
-		"@testing-library/user-event": "^14.6.1",
+		"@tailwindcss/vite": "^4.1.16",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
 		"@typescript-eslint/eslint-plugin": "^8.46.2",
 		"@typescript-eslint/parser": "^8.46.2",
-		"@vitest/coverage-v8": "3.2.4",
+		"@vitest/browser": "^4.0.1",
+		"@vitest/browser-playwright": "^4.0.1",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
 		"embla-carousel-svelte": "^8.6.0",
@@ -145,7 +143,6 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.5",
 		"formsnap": "^2.0.1",
-		"jsdom": "^27.0.1",
 		"layerchart": "2.0.0-next.40",
 		"mode-watcher": "^1.1.0",
 		"paneforge": "^1.0.2",
@@ -153,24 +150,25 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"publint": "^0.3.15",
-		"svelte": "5.41.1",
+		"svelte": "5.42.3",
 		"svelte-check": "^4.3.3",
 		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.28.0",
-		"tailwindcss": "^4.1.15",
+		"tailwindcss": "^4.1.16",
 		"tslib": "^2.8.1",
 		"tw-animate-css": "1.4.0",
 		"typescript": "^5.9.3",
 		"vaul-svelte": "1.0.0-next.7",
-		"vite": "^7.1.11",
-		"vitest": "^3.2.4",
+		"vite": "^7.1.12",
+		"vitest": "^4.0.4",
+		"vitest-browser-svelte": "^2.0.0",
 		"zod": "4.1.12"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.19.0",
+	"packageManager": "pnpm@10.20.0",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@tailwindcss/oxide",
