--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "2.0.10",
+	"version": "2.0.11",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && pnpm package",
@@ -123,6 +123,8 @@
 		"tailwind-variants": "^3.1.1"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.4.0",
+		"@eslint/js": "^9.38.0",
 		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.553.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
@@ -132,8 +134,6 @@
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
-		"@typescript-eslint/eslint-plugin": "^8.46.4",
-		"@typescript-eslint/parser": "^8.46.4",
 		"@vitest/browser": "^4.0.9",
 		"@vitest/browser-playwright": "^4.0.9",
 		"d3-scale": "^4.0.2",
@@ -143,6 +143,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.0",
 		"formsnap": "^2.0.1",
+		"globals": "^16.5.0",
 		"layerchart": "2.0.0-next.40",
 		"mode-watcher": "^1.1.0",
 		"paneforge": "^1.0.2",
@@ -158,6 +159,7 @@
 		"tslib": "^2.8.1",
 		"tw-animate-css": "1.4.0",
 		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.46.4",
 		"vaul-svelte": "1.0.0-next.7",
 		"vite": "^7.2.2",
 		"vitest": "^4.0.9",
