--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "2.1.0",
+	"version": "2.1.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && pnpm package",
@@ -38,6 +38,10 @@
 		"./data-table": {
 			"types": "./dist/data-table/index.d.ts",
 			"default": "./dist/data-table/index.js"
+		},
+		"./data-grid": {
+			"types": "./dist/data-grid/index.d.ts",
+			"default": "./dist/data-grid/index.js"
 		},
 		"./drawer": {
 			"types": "./dist/drawer/index.d.ts",
