--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
 	"dependencies": {
 		"bits-ui": "2.15.5",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.563.0",
 		"tailwind-merge": "^3.4.0",
 		"tailwind-variants": "^3.2.2"
 	},
@@ -145,7 +146,7 @@
 		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.14.0",
+		"eslint-plugin-svelte": "^3.15.0",
 		"formsnap": "^2.0.1",
 		"globals": "^17.3.0",
 		"layerchart": "2.0.0-next.40",
@@ -156,7 +157,7 @@
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"publint": "^0.3.17",
 		"runed": "^0.37.1",
-		"svelte": "5.50.0",
+		"svelte": "5.50.2",
 		"svelte-check": "^4.3.6",
 		"svelte-sonner": "^1.0.7",
 		"sveltekit-superforms": "^2.29.1",
